--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+    background: url(./assets/istockphoto-1277143096-612x612.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
